Kakfa Kraft Mode

--- a/graylogpub/src/main/resources/application.yml
+++ b/graylogpub/src/main/resources/application.yml
@@ -2,7 +2,11 @@
 spring:
   application:
     name: graylogpub-microservice
+  config:
+    import: configserver:http://localhost:8888
   cloud:
     config:
-      uri: http://localhost:8888
-      profile: local
+      uri: http://localhost:8888  # URL of the Config Server
+      label: master  # The label (branch) of the config repository, typically 'master' or a custom one
+      profile: dev  # The profile to load configuration for (e.g., dev, prod)
+      failFast: true
