--- a/resources/dev/graylogpub-microservice-dev.yml
+++ b/resources/dev/graylogpub-microservice-dev.yml
@@ -7,6 +7,7 @@ spring:
     name: graylogpub-microservice
     facility-num: 5
 
+  kafka:
     topic:
       graylog: graylog-publisher
       graylog-pub: graylog-message
