Kakfa Kraft Mode

--- a/resources/dev/graylogpub-microservice-dev.yml
+++ b/resources/dev/graylogpub-microservice-dev.yml
@@ -17,6 +17,6 @@ spring:
 
     consumer:
       group-id: graylog-message-microservice-group
-      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         specific.avro.reader: true
