--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
 
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
     consumer:
       group-id: order-microservice-group
